fixed display bug with z-index on mobile menu

--- a/src/components/BackDrop/BackDrop.css
+++ b/src/components/BackDrop/BackDrop.css
@@ -7,7 +7,7 @@
     height: 100%;
     width: 100%;
     background: rgb(45,45,45);
-    z-index: 1;
+    z-index: 20;
 }
 
 .BackDrop_backgroundImage {
@@ -18,7 +18,7 @@
     right: 0;
     overflow: hidden;
     background-image: url('./assets/bigfoot.jpg');
-    z-index: -1;
+    z-index: 20;
     background-position: center;
     background-size: cover;
     opacity: 0.4;
@@ -37,6 +37,7 @@
     color: white;
     margin: 20px;
     font-size: 4em;
+    z-index: 20;
 }
 
 .Backdrop_closeButton {
@@ -45,6 +46,8 @@
     position: absolute;
     right: 50px;
     top: 20px;
+    z-index: 20;
+
 }
 
 .show {
